fix(focus): guaranteed focus visibility when fixed header overlaps

--- a/scss/_back-to-top.scss
+++ b/scss/_back-to-top.scss
@@ -1,7 +1,9 @@
 // Boosted only
 // See https://moderncss.dev/pure-css-smooth-scroll-back-to-top/
-[id="#{$back-to-top-target-id}"]:target {
-  scroll-margin-top: $back-to-top-target-offset-top;
+@if $enable-fixed-header {
+  [id="#{$back-to-top-target-id}"]:target {
+    scroll-margin-top: $back-to-top-target-offset-top;
+  }
 }
 
 .back-to-top {
